--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "ts-jest": "^24.1.0",
     "aws-cdk": "1.24.0",
     "ts-node": "^8.1.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "npm-check-updates": "^4.0.1"
   },
   "dependencies": {
     "@aws-cdk/core": "1.24.0",
